<resources>
    <string name="app_name">Karira</string>

    <!--  Authentication  -->
    <string name="auth_title">Selamat datang di Karira</string>
    <string name="auth_subtitle">Kami hadir untuk membantu anda mencari proyek dan layanan terbaik</string>
    <string name="auth_button">Masuk dengan Google</string>

    <string name="selectrole_subtitle">Pilih role anda</string>
    <string name="selectrole_notes">Anda hanya bisa memilih role sekali</string>
    <string name="selectrole_freelancer_title">Freelancer</string>
    <string name="selectrole_freelancer_description">Membuat layanan, mendaftar proyek, untuk individu</string>
    <string name="selectrole_client_title">Client</string>
    <string name="selectrole_client_description">Membuat proyek, mendaftar layanan, untuk kelompok</string>

    <string name="skill_title">Tambahkan skill untuk mencocokkan proyek &amp; layanan</string>
    <string name="skill_input_hint">Nama skill</string>

    <string name="submit_button">Simpan</string>
    <string name="submit_button_skill">Simpan</string>

    <!-- ===================================================================================== -->
    <!-- ==================================== LAYANAN ======================================== -->
    <!-- ===================================================================================== -->
    <string name="layanan_title">%1$sLayanan%2$s</string>
    <string name="layanan_titlesub">Produk dari freelancer yang dibuat untuk kalian</string>
    <string name="layanan_recommend_title">Mungkin kamu suka layanan ini</string>
    <string name="layanan_titlesub_ku">Kamu bisa melihat seluruh layanan yang pernah kamu buat disini</string>
    <string name="layanan_titlesub_search">Mungkin kamu bisa menemukan layanan yang paling cocok untukmu disini</string>
    <string name="layanan_titlesub_buat">Ciptakan layanan milikmu untuk pelanggan disini</string>
    <string name="layanan_titlesub_buat_rekomendasi">Kami akan memberikan kategori, rekomendasi harga &amp; tag untuk layananmu</string>
    <string name="layanan_input_hint">Cari layanan</string>

    <string name="layanan_cari_button">Cari layanan</string>
    <string name="layanan_ku_button">Layananku</string>
    <string name="layanan_main_button_rekomendasi">Rekomendasi</string>

    <string name="layanan_detail_status_review">Layanan masih direview</string>
    <string name="layanan_detail_status_closed">Layanan sudah ditutup</string>
    <string name="layanan_detail_type_null">Tipe belum ditetapkan admin</string>
    <string name="layanan_detail_user">Pesanan</string>
    <string name="layanan_detail_rating">Rating</string>
    <string name="layanan_detail_primary_button">Pesan</string>
    <string name="layanan_detail_primary_button_alter">Lihat pesanan</string>
    <string name="layanan_detail_outlined_button_alter">Edit layanan</string>
    <string name="layanan_detail_outlined_button">Tanya dulu</string>

    <string name="layanan_buat_button_reccomend">Lihat prediksi harga terbaik</string>
    <string name="layanan_buat_button">Buat layanan</string>
    <string name="layanan_buat_button_alter">Edit layanan</string>
    <string name="layanan_buat_title_formtitle">Judul</string>
    <string name="layanan_buat_price_formtitle">Harga</string>
    <string name="layanan_buat_duration_formtitle">Durasi (hari)</string>
    <string name="layanan_buat_recommendation_formtitle">Rekomendasi harga</string>
    <string name="layanan_buat_tags_formtitle">Tags</string>
    <string name="layanan_buat_description_formtitle">Deskripsi</string>
    <string name="layanan_buat_images_uploadboxtitle">Tambahkan gambar</string>

    <string name="layanan_cari_notfound">Tidak ada layanan yang ditemukan</string>
    <string name="layanan_cari_found">Mencari layanan</string>

    <string name="layanan_detail_dialog_title">Pesan layanan</string>
    <string name="layanan_detail_dialog_name">Nama pembeli</string>
    <string name="layanan_detail_dialog_price">Harga</string>
    <string name="layanan_detail_dialog_message">Pesan</string>
    <string name="layanan_detail_dialog_document">Dokumen pendukung</string>
    <string name="layanan_detail_dialog_primary_button">Pesan &amp; bayar</string>

    <string name="layanan_order_title">Pesananku</string>
    <string name="layanan_order_main_subtitle">Terdapat %1$s pesanan</string>
    <string name="layanan_order_subtitle">Terdapat %1$s pesanan untuk layanan%2$s</string>
    <string name="layanan_order_notfound">Tidak ada pesanan yang ditemukan</string>

    <!-- ===================================================================================== -->
    <!-- ===================================== PROYEK ======================================== -->
    <!-- ===================================================================================== -->
    <string name="proyek_title">%1$sProyek%2$s</string>
    <string name="proyek_titlesub">Produk dari client yang dibuat untuk kalian</string>
    <string name="proyek_recommend_title">Mungkin kamu suka proyek ini</string>
    <string name="proyek_titlesub_ku">Kamu bisa melihat seluruh proyek yang pernah kamu buat disini</string>
    <string name="proyek_titlesub_search">Mungkin kamu bisa menemukan proyek yang paling cocok untukmu disini</string>
    <string name="proyek_titlesub_buat">Ciptakan proyek milikmu untuk freelancer disini</string>
    <string name="proyek_titlesub_buat_rekomendasi">Kami akan memberikan kategori, rekomendasi harga &amp; tag untuk proyekmu</string>
    <string name="proyek_input_hint">Cari proyek</string>

    <string name="proyek_cari_button">Cari proyek</string>
    <string name="proyek_ku_button">Proyekku</string>
    <string name="proyek_main_button_rekomendasi">Rekomendasi</string>

    <string name="proyek_detail_status_review">Proyek masih direview</string>
    <string name="proyek_detail_status_closed">Proyek sudah ditutup</string>
    <string name="proyek_detail_type_null">Tipe belum ditetapkan admin</string>
    <string name="proyek_detail_order">Pesanan</string>
    <string name="proyek_detail_bids">Tawaran</string>
    <string name="proyek_detail_duration">Durasi proyek</string>
    <string name="proyek_detail_payment">Bayaran</string>
    <string name="proyek_detail_primary_button">Tawar</string>
    <string name="proyek_detail_primary_button_alter">Lihat tawaran</string>
    <string name="proyek_detail_outlined_button_alter">Edit proyek</string>
    <string name="proyek_detail_outlined_button">Tanya dulu</string>
    <string name="proyek_detail_dialog_title">Tawar proyek</string>
    <string name="proyek_detail_dialog_price">Imbalan</string>
    <string name="proyek_detail_dialog_price_undertext">Masukkan antara Rp%1$s - Rp%2$s</string>
    <string name="proyek_detail_dialog_message">Pesan</string>
    <string name="proyek_detail_dialog_alert">Anda hanya bisa menawar sekali</string>
    <string name="proyek_detail_dialog_button_primary">Tawar</string>
    <string name="proyek_detail_dialog_button_outlined">Tutup</string>

    <string name="proyek_buat_button_reccomend">Lihat prediksi harga terbaik</string>
    <string name="proyek_buat_button">Buat proyek</string>
    <string name="proyek_buat_button_alter">Edit proyek</string>
    <string name="proyek_buat_title_formtitle">Judul</string>
    <string name="proyek_buat_lowerbound_formtitle">Batas bawah harga tawaran (Rupiah)</string>
    <string name="proyek_buat_upperbound_formtitle">Batas atas harga tawaran (Rupiah)</string>
    <string name="proyek_buat_duration_formtitle">Durasi (hari)</string>
    <string name="proyek_buat_recommendation_formtitle">Rekomendasi harga</string>
    <string name="proyek_buat_tags_formtitle">Tags</string>
    <string name="proyek_buat_description_formtitle">Deskripsi</string>
    <string name="proyek_buat_file_uploadboxtitle">Tambahkan file</string>
    <string name="proyek_buat_file_title">Dokumen untuk bidder</string>

    <string name="proyek_cari_notfound">Tidak ada proyek yang ditemukan</string>
    <string name="proyek_cari_found">Mencari proyek</string>

    <string name="proyek_tawaran_title">Tawaran %1$s</string>
    <string name="proyek_tawaran_subtitle">Terdapat %1$s tawaran untuk proyek ini</string>
    <string name="proyek_tawaran_empty">Tidak ada tawaran yang dibuat</string>
    <string name="proyek_tawaran_dialog_title">Buat pesanan</string>
    <string name="proyek_tawaran_dialog_name">Nama penawar</string>
    <string name="proyek_tawaran_dialog_email">Email</string>
    <string name="proyek_tawaran_dialog_skill">Skill</string>
    <string name="proyek_tawaran_dialog_primary_button">Terima &amp; bayar</string>

    <string name="proyek_order_title">Pesananku</string>
    <string name="proyek_order_subtitle">Terdapat %1$s pesanan untuk proyek%2$s</string>
    <string name="proyek_order_notfound">Tidak ada pesanan yang ditemukan</string>

    <!-- ===================================================================================== -->
    <!-- ================================== REKOMENDASI ====================================== -->
    <!-- ===================================================================================== -->
    <string name="rekomendasi_retry">Coba lagi</string>
    <string name="rekomendasi_subtitle">Kami akan memberikan preferensi %1$s untukmu</string>
    <string name="rekomendasi_empty">Tidak ada rekomendasi untukmu</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="web_development">Web Development</string>
    <string name="mobile_development">Mobile Development</string>
    <string name="game_development">Game Development</string>
    <string name="programming">Programming</string>
    <string name="it_services">IT Services</string>
    <string name="_3d_design">3D Design</string>
    <string name="graphic_design">Graphic Design</string>
    <string name="property_design">Property Design</string>
    <string name="ui_ux_design">UI/UX Design</string>
    <string name="lainnya">Lainnya</string>
    <string name="proyek">Proyek</string>
    <string name="layanan">Layanan</string>
    <string name="chat">Chat</string>
    <string name="notifications">Notifications</string>
    <string name="belum_ada_notifikasi">Belum ada notifikasi</string>
    <string name="tab_riwayat">Riwayat</string>
    <string name="tab_proses">Proses</string>

    <!-- ===================================================================================== -->
    <!-- ===================================== ORDER ======================================== -->
    <!-- ===================================================================================== -->
    <string name="order_title">Detail pesanan</string>
    <string name="order_tawaran_formtitle">Tawaran</string>
    <string name="order_bid_button">Lihat tawaran</string>
    <string name="order_dialog_canceltext">Apakah anda yakin ingin membatalkan pesanan ini?</string>
    <string name="order_dialog_finishtext">Apakah anda yakin ingin menyelesaikan pesanan ini?</string>
    <string name="order_dialog_alerttext">Anda hanya bisa melakukan ini sekali</string>
    <string name="order_cancelorder_button">Batalkan</string>
    <string name="order_finishorder_button">Selesaikan</string>

</resources>