<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".component.xml.fragment.TitleFragment"
    android:paddingTop="64dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="24dp">

        <TextView
            android:id="@+id/title_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="28sp"
            android:textStyle="bold"
            app:strokeColor="?attr/colorOnPrimarySurface"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Layanan"/>
        <TextView
            android:id="@+id/title_titlesub"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_marginTop="4dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title_title"
            tools:text="@string/layanan_titlesub" />

        <LinearLayout
            android:id="@+id/title_button_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:paddingBottom="32dp"
            tools:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/title_titlesub">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/title_outlined_button"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_weight="1"
                android:textColor="@color/purple_500"
                app:cornerRadius="8dp"
                app:strokeColor="@color/purple_500"
                tools:text="@string/layanan_cari_button" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/title_primary_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:cornerRadius="8dp"
                tools:text="@string/layanan_ku_button" />

        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/title_search_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:paddingBottom="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_titlesub">

            <EditText
                android:id="@+id/skill_textview"
                android:layout_width="0dp"
                android:layout_height="46dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/shape_bordered_edittext"
                android:hint="@string/layanan_input_hint"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:padding="12dp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textSize="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/skill_search_button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/skill_search_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:padding="16dp"
                android:backgroundTint="@color/purple_500"
                android:src="@drawable/ic_search_white"
                app:layout_constraintEnd_toEndOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>