<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_500"
    android:fillViewport="true"
    tools:context=".activity.auth.SelectRoleFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingVertical="48dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/relativeLayout"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="24dp"
                    android:text="@string/auth_title"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="24dp"
                    android:text="@string/skill_title"
                    android:textColor="@color/white"
                    android:textSize="18dp" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="56dp">

                    <EditText
                        android:id="@+id/skill_textview"
                        android:layout_width="0dp"
                        android:layout_height="46dp"
                        android:layout_marginEnd="8dp"
                        android:background="@drawable/shape_rounded_corner"
                        android:backgroundTint="@color/white"
                        android:hint="@string/skill_input_hint"
                        android:imeOptions="actionNext"
                        android:inputType="text"
                        android:padding="12dp"
                        android:singleLine="true"
                        android:textColor="@color/black"
                        android:textSize="16dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/skill_add"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageButton
                        android:id="@+id/skill_add"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:backgroundTint="@color/white"
                        android:src="@drawable/ic_add_black"
                        app:layout_constraintEnd_toEndOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.compose.ui.platform.ComposeView
                    android:id="@+id/selected_skills"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_gravity="center"
            android:layout_marginHorizontal="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/auth_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignLeft="@+id/buttonLayout"
                android:layout_alignRight="@+id/buttonLayout"
                android:backgroundTint="@color/white"
                app:cornerRadius="6dp" />

            <LinearLayout
                android:id="@+id/buttonLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="4dp"
                    android:gravity="center"
                    android:text="@string/submit_button"
                    android:textAppearance="@style/TextAppearance.AppCompat.Button"
                    android:textColor="@color/purple_500" />

            </LinearLayout>

        </RelativeLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>